--- a/swp_calulator.html
+++ b/swp_calulator.html
@@ -100,7 +100,7 @@ button:hover {
   <button onclick="calculateSWP()">Calculate</button>
 
   <div id="result"></div>
-  <Div><p>Develoed By Dhiren Pathak</p></Div>
+  <div><p>Develoed By Dhiren Pathak</p></div>
 </div>
 
 <script>
